<resources>

    <string name="app_name">Android Fireworks</string>
    <string name="title_activity_main">Fireworks</string>
    <string name="menu_chooseFW">Firework Type</string>
    <string name="menu_chooseScatteredFW">Scattered FW</string>
    <string name="menu_chooseSpiderFW">Spider FW</string>
    <string name="menu_chooseSmileyFaceFW">Smiley Face FW</string>
    <string name="menu_chooseRandomFW">Random FW</string>
    <string name="menu_chooseCircleFW">Circle FW</string>
    <string name="menu_chooseThreeCircleFW">Three Circle FW</string>
    <string name="menu_startRecording">Start Recording</string>
    <string name="menu_stopRecording">Stop Recording</string>
    <string name="menu_startShow">Play Recorded Show</string>
    <string name="menu_startSavedShow">Play Saved Show</string>
    <string name="menu_saveShow">Save Show</string>
    <string name="menu_changeBkgrd">Change Background Image</string>
    <string name="menu_eifelTowers">Eifel Towers</string>
    
</resources>